# CppJIT

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
python/cppjit/: __init__.py
python/cppjit/cppyy/: __init__.py  _cpython_cppyy.py  _pypy_cppyy.py  _typemap.py  interactive.py  ll.py  numba_ext.py  reflex.py  types.py
python/cppjit/cppyy/__pyinstaller/: hook-cppyy.py
src/CPyCppyy/src/: API.cxx  CPPInstance.cxx  CPPInstance.h  CPPMethod.h  CPPScope.cxx  CPyCppyyModule.cxx  Converters.cxx  Cppyy.h  CustomPyTypes.cxx  DeclareConverters.h  Dispatcher.cxx  Executors.cxx  Pythonize.cxx  TemplateProxy.cxx  Utility.cxx  Utility.h
test/: Makefile  conftest.py  fragile.py  numpatest.py
